feat: move IterableExtensions to raysmith-utils; improve EntityClass.entityName()
refactor:
- rename team.mke.utils.ext to team.mke.utils
- build scripts

chore:
- update dependencies